--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,7 +2,5 @@
 @use '../../styles/partials/mixins' as *;
 
 .main {
-    background-color: rgb(35, 35, 35);
-    height: 90vh;
-    color: #fff;
+    margin: 4rem 12rem;
 }
