--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,30 +2,42 @@
 @use '../../styles/partials/mixins' as *;
 
 .header {
-    width: 80vw;
-    margin: 2rem auto;
-    @include row-flexer(space-between);
+    margin-bottom: $space-bottom* 2;
+    background-color: rgb(28, 28, 28);
+    box-shadow: 0px 2px 5px 0px rgba(19, 24, 44, 0.1);
+
+    &-wrapper {
+        @include row-flexer(space-between);
+        width: 85vw;
+        margin: 0 auto;
+        padding: $space-between-mob 0;
+    }
 
     &__link {
         cursor: pointer;
         text-decoration: none;
         color: $primary-clr;
-        font-size: 1.5rem;
+        color: #fff;
+        font-size: 1.75rem;
         font-weight: 500;
+        display: block;
+    }
+
+    &__form {
+        width: 100%;
+        @include row-flexer(center)
     }
 
     &__input {
         height: 2.5rem;
-        width: 50%;
+        width: 70%;
         padding: 0 .5rem;
         outline: none;
-        border: 0.0625rem solid $sec-accent-clr-2;
+        border: 0.09375rem solid $sec-accent-clr-2;
         border-radius: .25rem;
 
-
         &:focus {
-            border: 0.0625rem solid $prim-accent-clr-1;
-            // box-shadow: 0 0 .1rem $prim-accent-clr-1;
+            border: 0.09375rem solid $prim-accent-clr-1;
         }
     }
 
@@ -34,13 +46,15 @@
         gap: 1rem;
 
         .or {
-            font-weight: 800;
+            font-weight: 600;
+            font-size: $fs-label;
+            color: #fff;
         }
     }
 
     &__button {
         height: 2.5rem;
-        padding: 0 2rem;
+        width: 8rem;
         cursor: pointer;
         color: #fff;
         border: none;
@@ -58,13 +72,16 @@
 
         &--register {
             background-color: $primary-clr;
-            border: 0.0625rem solid $primary-clr;
+            // background-color: black;
 
             &:hover {
-                background-color: #fff;
-                color: $primary-clr;
-                border: 0.0625rem solid $primary-clr;
+                background-color: $primary-clr-mono;
             }
         }
+    }
+
+    &__user-profile {
+        width: 10rem;
+        color: $sec-accent-clr-1;
     }
 }
