--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @use './styles/partials/typography' as *;
 @use './styles/partials/variables' as *;
+@use './styles/partials/mixins' as *;
 
 *,
 *::before,
@@ -18,4 +19,11 @@ body {
 ::placeholder,
 input {
   font-family: Rubik, sans-serif;
+}
+
+.content-width-wrapper {
+  @include large-desktop {
+    max-width: $content-max-width;
+    margin: 0 auto;
+  }
 }
