--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -16,11 +16,11 @@
             height: 2.5rem;
             padding: 0 .5rem;
             outline: none;
-            border: 0.0625rem solid $sec-accent-clr-2;
+            border: 0.09375rem solid $sec-accent-clr-2;
             border-radius: .25rem;
 
             &:focus {
-                border: 0.0625rem solid $prim-accent-clr-1;
+                border: 0.09375rem solid $prim-accent-clr-1;
             }
         }
 
@@ -43,16 +43,14 @@
                 width: 20rem;
 
                 &:hover {
-                    background-color: #fff;
-                    color: $primary-clr;
-                    border: 0.0625rem solid $primary-clr;
+                    background-color: $primary-clr-mono;
                 }
             }
         }
 
         &__message {
             font-size: $fs-subheader;
-            border-left: 5px solid #FF0095;
+            border-left: 5px solid $prim-accent-clr-3;
             padding: 0.75rem;
             margin-top: $space-between-mob;
         }
