--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -4,7 +4,7 @@
 .sign-up {
     @include row-flexer();
     gap: 8rem;
-    margin: 25vh 25vw;
+    margin: 25vh 22vw;
 
     &__about {
         height: 20rem;
@@ -34,11 +34,11 @@
             height: 2.5rem;
             padding: 0 .5rem;
             outline: none;
-            border: 0.0625rem solid $sec-accent-clr-2;
+            border: 0.09375rem solid $sec-accent-clr-2;
             border-radius: .25rem;
 
             &:focus {
-                border: 0.0625rem solid $prim-accent-clr-1;
+                border: 0.09375rem solid $prim-accent-clr-1;
             }
         }
 
@@ -47,7 +47,7 @@
             font-size: $fs-subheader;
 
             sup {
-                color: #FF0095;
+                color: $prim-accent-clr-3;
             }
         }
 
@@ -63,9 +63,7 @@
             border-radius: .25rem;
 
             &:hover {
-                background-color: #fff;
-                color: $primary-clr;
-                border: 0.0625rem solid $primary-clr;
+                background-color: $primary-clr-mono;
             }
         }
     }
@@ -77,7 +75,7 @@
         margin-top: $space-between-mob;
 
         &--error {
-            border-left: 5px solid #FF0095;
+            border-left: 5px solid $prim-accent-clr-3;
         }
 
         &__link {
