--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -50,7 +50,7 @@
 
         &__message {
             font-size: $fs-subheader;
-            border-left: 5px solid $prim-accent-clr-3;
+            border-left: 0.3125rem solid $prim-accent-clr-3;
             padding: 0.75rem;
             margin-top: $space-between-mob;
         }
