--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -70,12 +70,12 @@
 
     &__message {
         font-size: $fs-subheader;
-        border-left: 5px solid $prim-accent-clr-1;
+        border-left: 0.3125rem solid $prim-accent-clr-1;
         padding: 0.75rem;
         margin-top: $space-between-mob;
 
         &--error {
-            border-left: 5px solid $prim-accent-clr-3;
+            border-left: 0.3125rem solid $prim-accent-clr-3;
         }
 
         &__link {
