--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
 .header {
     margin-bottom: $space-bottom* 2;
     background-color: rgb(28, 28, 28);
-    box-shadow: 0px 2px 5px 0px rgba(19, 24, 44, 0.1);
+    box-shadow: 0rem 0.125rem 0.3125rem 0rem rgba(19, 24, 44, 0.1);
 
     &-wrapper {
         @include row-flexer(space-between);
