--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,14 +23,11 @@
         display: block;
     }
 
-    &__form {
-        width: 100%;
-        @include row-flexer(center)
-    }
+    // &__form {}
 
     &__input {
         height: 2.5rem;
-        width: 70%;
+        width: 50%;
         padding: 0 .5rem;
         outline: none;
         border: 0.09375rem solid $sec-accent-clr-2;
