--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -102,6 +102,7 @@
             color: $prim-accent-clr-3;
             width: fit-content;
             cursor: pointer;
+            border-bottom: 0.0625rem solid #fff;
 
             &:hover {
                 border-bottom: 0.0625rem solid $prim-accent-clr-3;
