Add active state on selected cards

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -2,7 +2,7 @@
 @use '../../styles/partials/mixins' as *;
 
 .map {
-    height: 30vh;
+    height: 15rem;
     margin-bottom: $space-bottom;
 
     &-container {
