Add landing page

--- a/src/components/EstablishmentCard/EstablishmentCard.scss
+++ b/src/components/EstablishmentCard/EstablishmentCard.scss
@@ -44,7 +44,7 @@
         font-size: $fs-label;
 
         &--pass {
-            background-color: #189475;
+            background-color: $tertiary-clr-1;
             padding: 1rem 1.5rem;
         }
 
