--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -18,6 +18,9 @@ $sec-accent-clr-1: #33AAFF; // cta hover
 $sec-accent-clr-2: #e1e1e1; // divider, form field outline
 $sec-accent-clr-3: #fafafa; // from field background
 
+$tertiary-clr-1: #158463;
+$tertiary-clr-2: #c94515;
+
 /* Misc */
 $border-radius: .25rem;
 $stroke-width: .0625rem;
