--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -138,7 +138,7 @@
         background-color: $prim-accent-clr-2;
 
         &--pass {
-            background-color: #189475;
+            background-color: $tertiary-clr-1;
         }
 
         &--conditional-pass {
