--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
 
 ::placeholder,
 input {
-  font-family: Rubik, sans-serif;
+  font-family: default $ff-primary;
 }
 
 .content-width-wrapper {
