--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -4,7 +4,13 @@
 .sign-up {
     @include row-flexer();
     gap: 8rem;
-    margin: 25vh 22vw;
+    padding: 25vh 22vw;
+    height: 100vh;
+    background-image: radial-gradient(circle at center,
+            $prim-accent-clr-2 0.03rem,
+            transparent 0);
+    background-size: 1rem 1rem;
+    background-repeat: round;
 
     &__about {
         height: 20rem;
