--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,7 +34,7 @@
 
         &:focus {
             border: 0.09375rem solid $prim-accent-clr-1;
-            background-color: hsl(205, 100%, 60%, 25%);
+            background-color: hsla(205, 100%, 60%, 25%);
             color: #fff;
         }
     }
